# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "baseformrefresh_fuzzer:fuzztest",
    "bundleforminfo_fuzzer:fuzztest",
    "facrconnection_fuzzer:fuzztest",
    "facrconnectionFourth_fuzzer:fuzztest",
    "facrconnectionThree_fuzzer:fuzztest",
    "facrconnectionTwo_fuzzer:fuzztest",
    "formabilityconnection_fuzzer:fuzztest",
    "formabilityconnectionreporter_fuzzer:fuzztest",
    "formabnormalreporter_fuzzer:fuzztest",
    "formamsadapter_fuzzer:fuzztest",
    "formeditservice_fuzzer:fuzztest",
    "formexemptlockmgr_fuzzer:fuzztest",
    "formappupgraderefreshimpl_fuzzer:fuzztest",
    "formashmem_fuzzer:fuzztest",
    "formbmshelper_fuzzer:fuzztest",
    "formcachemgr_fuzzer:fuzztest",
    "formcallermgr_fuzzer:fuzztest",
    "formdatamgr_fuzzer:fuzztest",
    "formdatamgrfour_fuzzer:fuzztest",
    "formdatamgrone_fuzzer:fuzztest",
    "formdatamgrthree_fuzzer:fuzztest",
    "formdatamgrtwo_fuzzer:fuzztest",
    "formdbcache_fuzzer:fuzztest",
    "formdbcacheannex_fuzzer:fuzztest",
    "formdistributedmgr_fuzzer:fuzztest",
    "formecologicalruleparam_fuzzer:fuzztest",
    "formerrors_fuzzer:fuzztest",
    "formeventreport_fuzzer:fuzztest",
    "formforcerefreshimpl_fuzzer:fuzztest",
    "formfreeinstalloperator_fuzzer:fuzztest",
    "formhostcaller_fuzzer:fuzztest",
    "formhostclient_fuzzer:fuzztest",
    "formhostdelegatestub_fuzzer:fuzztest",
    "formhostrecord_fuzzer:fuzztest",
    "formhostrefreshimpl_fuzzer:fuzztest",
    "formhoststub_fuzzer:fuzztest",
    "formhosttaskmgr_fuzzer:fuzztest",
    "forminfomgr_fuzzer:fuzztest",
    "forminfomgrthree_fuzzer:fuzztest",
    "forminfomgrTwo_fuzzer:fuzztest",
    "forminfohelper_fuzzer:fuzztest",
    "forminfordbstoragemgr_fuzzer:fuzztest",
    "forminfostorage_fuzzer:fuzztest",
    "formiteminfo_fuzzer:fuzztest",
    "formjsinfo_fuzzer:fuzztest",
    "formmgr_fuzzer:fuzztest",
    "formmgradapter_fuzzer:fuzztest",
    "formmgradapterone_fuzzer:fuzztest",
    "formmgradapterthree_fuzzer:fuzztest",
    "formmgradaptertwo_fuzzer:fuzztest",
    "formmgrannex_fuzzer:fuzztest",
    "formmgrqueue_fuzzer:fuzztest",
    "formmgrproxy_fuzzer:fuzztest",
    "formmgrproxyannex_fuzzer:fuzztest",
    "formmgrservice_fuzzer:fuzztest",
    "formmgrserviceparallelize_fuzzer:fuzztest",
    "formmgrstub_fuzzer:fuzztest",
    "formnetconnrefreshimpl_fuzzer:fuzztest",
    "formnexttimerefreshimpl_fuzzer:fuzztest",
    "formobservertaskmgr_fuzzer:fuzztest",
    "formprovidercaller_fuzzer:fuzztest",
    "formproviderdata_fuzzer:fuzztest",
    "formproviderinfo_fuzzer:fuzztest",
    "formprovidermgr_fuzzer:fuzztest",
    "formproviderproxy_fuzzer:fuzztest",
    "formproviderrefreshimpl_fuzzer:fuzztest",
    "formprovidertaskmgr_fuzzer:fuzztest",
    "formproviderstub_fuzzer:fuzztest",
    "formrefresh_fuzzer:fuzztest",
    "formrefreshafteruncontrolimpl_fuzzer:fuzztest",
    "formrenderconnection_fuzzer:fuzztest",
    "formrendereventreport_fuzzer:fuzztest",
    "formrenderimpl_fuzzer:fuzztest",
    "formrendermgr_fuzzer:fuzztest",
    "formrendermgrinner_fuzzer:fuzztest",
    "formrenderproxy_fuzzer:fuzztest",
    "formrenderrecord_fuzzer:fuzztest",
    "formrenderreport_fuzzer:fuzztest",
    "formrenderserviceextension_fuzzer:fuzztest",
    "formrenderservicemgr_fuzzer:fuzztest",
    "formrenderservicemgrthree_fuzzer:fuzztest",
    "formrenderservicemgrtwo_fuzzer:fuzztest",
    "formrenderstub_fuzzer:fuzztest",
    "formrenderstatusmgr_fuzzer:fuzztest",
    "formrenderstatustaskmgr_fuzzer:fuzztest",
    "formsandboxrendermgrinner_fuzzer:fuzztest",
    "formsharemgr_fuzzer:fuzztest",
    "formsharetaskmgr_fuzzer:fuzztest",
    "formsupplycallback_fuzzer:fuzztest",
    "formsupplyproxy_fuzzer:fuzztest",
    "formsupplystub_fuzzer:fuzztest",
    "formsyseventreceiver_fuzzer:fuzztest",
    "formsyseventreceiverTwo_fuzzer:fuzztest",
    "formtimermgr_fuzzer:fuzztest",
    "formtimermgrtwo_fuzzer:fuzztest",
    "formtimermgrannex_fuzzer:fuzztest",
    "formtimermgrthree_fuzzer:fuzztest",
    "formtimerrefreshimpl_fuzzer:fuzztest",
    "formtimerrefreshimpltwo_fuzzer:fuzztest",
    "formutil_fuzzer:fuzztest",
    "geterrormsg_fuzzer:fuzztest",
    "paramcontrol_fuzzer:fuzztest",
    "parammanager_fuzzer:fuzztest",
    "paramreader_fuzzer:fuzztest",
    "signtools_fuzzer:fuzztest",
    "providerconnectproxy_fuzzer:fuzztest",
    "providerconnectstub_fuzzer:fuzztest",
  ]

  if (ability_runtime_graphics) {
    deps += [ "formmanager_fuzzer:fuzztest" ]
  }
}
